--- a/pom.xml
+++ b/pom.xml
@@ -4,23 +4,8 @@
     <groupId>dev.yracnet</groupId>
     <artifactId>app</artifactId>
     <version>1.0.0</version>
-    <packaging>war</packaging>
-    <dependencies>
-        <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0.1</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
+    <packaging>pom</packaging>
+    <modules>
+        <module>app-faces</module>
+    </modules>
 </project>
