--- a/app-logic/pom.xml
+++ b/app-logic/pom.xml
@@ -6,24 +6,14 @@
         <artifactId>app</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>app-faces</artifactId>
-    <packaging>war</packaging>
+    <artifactId>app-logic</artifactId>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>app-serv</artifactId>
-            <version>${project.version}</version>
-        </dependency>
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
