--- a/app-impl/pom.xml
+++ b/app-impl/pom.xml
@@ -6,8 +6,8 @@
         <artifactId>app</artifactId>
         <version>1.0.0</version>
     </parent>
-    <artifactId>app-faces</artifactId>
-    <packaging>war</packaging>
+    <artifactId>app-impl</artifactId>
+    <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
@@ -15,13 +15,13 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.primefaces</groupId>
-            <artifactId>primefaces</artifactId>
-            <version>7.0</version>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>app-serv</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>app-impl</artifactId>
+            <artifactId>app-logic</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
