--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,6 @@
         <module>app-logic</module>
         <module>app-serv</module>
         <module>app-impl</module>
+        <module>app-model</module>
     </modules>
 </project>
